--- a/ui/common/css/component/_board.scss
+++ b/ui/common/css/component/_board.scss
@@ -34,7 +34,7 @@
     position: absolute;
     width: 100%;
     height: calc(100% / 11);
-    padding: 0;
+    padding: 0 !important;
     left: 0;
     &.hand-top {
       top: 0;
