refactor ui/study ctrl.setTab and make broadcast current round clickable

--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -37,6 +37,10 @@ main.has-relay-tour {
       @extend %roboto;
       font-size: 1.2em;
     }
+    &.ongoing {
+      background: mix($c-accent, $c-bg-box, 10%);
+      color: $c-accent;
+    }
   }
 
   .study__multiboard {
