--- a/ui/lobby/css/_lobby.scss
+++ b/ui/lobby/css/_lobby.scss
@@ -168,6 +168,7 @@ body {
   grid-auto-rows: 0; /* all the other rows 0 */
   font-size: 0.9em;
   h2 {
+    @extend %page-text-shadow !optional;
     font-size: 1.2em;
   }
   .ublog-post-card:hover {
