--- a/ui/common/css/component/_markdown.scss
+++ b/ui/common/css/component/_markdown.scss
@@ -94,8 +94,8 @@
 }
 
 @mixin rendered-markdown--code {
-  $c-code-bg: if($theme-light, hsl(226, 8%, 95%), #111);
-  $c-code-font: if($theme-light, $c-font, #ccc);
+  $c-code-bg: $c-bg-zebra;
+  $c-code-font: $c-font-clear;
   code {
     @extend %box-radius;
     font-family: monospace;
@@ -108,7 +108,7 @@
 
   pre {
     @extend %box-neat;
-    background: if($theme-light, $c-code-bg, hsl(226, 16%, 15%));
+    background: $c-code-bg;
     padding: 1em 1.5em;
     line-height: 1.4em;
     code {
