--- a/ui/common/css/component/_slist.scss
+++ b/ui/common/css/component/_slist.scss
@@ -3,7 +3,7 @@
   border-bottom: $border;
 
   @include breakpoint($mq-not-x-small) {
-    min-width: 640px;
+    min-width: calc(650px - var(--box-padding) * 2);
   }
 
   thead {
@@ -63,5 +63,5 @@
 
 .slist-wrapper {
   overflow-x: auto;
-  max-width: 100vw;
+  max-width: calc(100vw - var(--box-padding) * 2);
 }
