--- a/ui/common/css/form/_cmn-toggle.scss
+++ b/ui/common/css/form/_cmn-toggle.scss
@@ -2,6 +2,7 @@
   @extend %double-tap;
   position: absolute;
   margin-#{$start-direction}: -99999px;
+  visibility: hidden;
 }
 
 .cmn-toggle + label {
