redesign computer analysis page

--- a/ui/analyse/css/_analyse.base.scss
+++ b/ui/analyse/css/_analyse.base.scss
@@ -10,7 +10,7 @@
 
 @import 'layout';
 @import 'tools';
-@import 'action-menu';
+@import '../../common/css/component/action-menu';
 @import 'explorer/explorer';
 @import 'training';
 @import 'practice';
