--- a/ui/puzzle/css/_puzzle.scss
+++ b/ui/puzzle/css/_puzzle.scss
@@ -3,6 +3,7 @@ $mq-col2-squeeze: $mq-col2-uniboard-squeeze;
 $mq-col2: $mq-col2-uniboard;
 $mq-col3: $mq-col3-uniboard;
 
+@import '../../common/css/component/action-menu';
 @import 'layout';
 @import 'side';
 @import 'tools';
