--- a/ui/round/css/_moves.scss
+++ b/ui/round/css/_moves.scss
@@ -32,7 +32,7 @@
     position: relative;
   }
 
-  .notification {
+  .new-nag {
     position: absolute;
     top: 0;
     bottom: 40%;
@@ -43,29 +43,29 @@
     height: 7px;
     border-radius: 50%;
     background: red;
-  }
 
-  .notification::after {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 7px;
-    height: 7px;
-    border-radius: inherit;
-    background: red;
-    animation: 1.5s ease-out 0s infinite pulse;
-    opacity: 0.2;
-    content: '';
-  }
-
-  @keyframes pulse {
-    0% {
-      transform: scale3d(1, 1, 1);
-      opacity: 0.7;
+    &::after {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 7px;
+      height: 7px;
+      border-radius: inherit;
+      background: red;
+      animation: 1.5s ease-out 0s infinite new-nag-pulse;
+      opacity: 0.2;
+      content: '';
     }
-    100% {
-      transform: scale3d(4, 4, 4);
-      opacity: 0;
+
+    @keyframes new-nag-pulse {
+      0% {
+        transform: scale3d(1, 1, 1);
+        opacity: 0.7;
+      }
+      100% {
+        transform: scale3d(4, 4, 4);
+        opacity: 0;
+      }
     }
   }
 
