--- a/ui/round/css/_round.scss
+++ b/ui/round/css/_round.scss
@@ -4,7 +4,7 @@
 @import 'zen';
 @import 'side';
 @import 'meta';
-@import 'menu';
+@import 'board-menu';
 @import 'table';
 @import 'user';
 @import 'clock';
