turn conditional move line into button for accessibility

--- a/ui/analyse/css/_forecast.scss
+++ b/ui/analyse/css/_forecast.scss
@@ -26,7 +26,8 @@
   }
 
   .entry {
-    @extend %flex-center-nowrap;
+    @extend %button-none, %flex-center-nowrap;
+    width: 100%;
 
     cursor: pointer;
     &:hover {
