remove css vendor rules

--- a/ui/common/css/form/_cmn-toggle.scss
+++ b/ui/common/css/form/_cmn-toggle.scss
@@ -9,8 +9,7 @@
   position: relative;
   cursor: pointer;
   outline: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
+  user-select: none;
   padding: 1px;
   width: 40px;
   height: 24px;
