--- a/ui/common/css/form/_cmn-toggle.scss
+++ b/ui/common/css/form/_cmn-toggle.scss
@@ -1,7 +1,7 @@
 .cmn-toggle {
   @extend %double-tap;
   position: absolute;
-  margin-#{$start-direction}: -99999px;
+  margin-left: -99999px;
 }
 
 .cmn-toggle + label {
