--- a/ui/common/css/abstract/_uniboard.scss
+++ b/ui/common/css/abstract/_uniboard.scss
@@ -12,7 +12,7 @@ $col3-uniboard-side: minmax(230px, 350px);
 $col3-uniboard-table: minmax(240px, 400px);
 $col3-uniboard-controls: 3rem;
 
-$col3-uniboard-min-width: calc(70vmin * var(--board-scale));
+$col3-uniboard-min-width: calc(max(720px, 50vmin) * var(--board-scale));
 $col3-uniboard-max-width: calc(100vh * var(--board-scale) - #{$site-header-outer-height} - #{$col3-uniboard-controls});
 $col3-uniboard-width: minmax($col3-uniboard-min-width, $col3-uniboard-max-width);
 
