fix analysis / change voice icon
fix objectStorage

--- a/ui/voice/css/_voice.scss
+++ b/ui/voice/css/_voice.scss
@@ -1,5 +1,5 @@
-$c-recording: hsl(6, 86%, 50%);
-$c-recording-hover: hsl(6, 100%, if($theme == 'light', 40%, 60%));
+$c-mic-enabled: if($theme == 'light', $c-primary, $c-primary);
+$c-mic-bg-hover: if($theme == 'light', $c-font-dimmer, transparent);
 
 #voice-control {
   position: relative;
@@ -30,27 +30,32 @@ $c-recording-hover: hsl(6, 100%, if($theme == 'light', 40%, 60%));
 
 #microphone-button {
   span {
+    padding: 1px;
     font-family: 'lichess';
     font-size: 1.6em;
     border: 1px solid transparent;
-    border-width: 0 1px;
-    border-radius: 0.25em;
-  }
-  &.enabled span {
-    color: $c-recording;
-    animation: pulseBorderRed 1s;
-    animation-iteration-count: infinite;
-    border-color: $c-recording;
+    border-width: 1px 1px;
+    border-radius: 0.3em;
     &:hover {
-      color: $c-recording-hover;
+      color: $c-font;
+      background-color: $c-mic-bg-hover;
     }
   }
-  @keyframes pulseBorderRed {
+  &.enabled span {
+    color: $c-mic-enabled;
+    animation: pulseBorder 2s;
+    animation-iteration-count: infinite;
+    border-color: $c-primary;
+    &:hover {
+      color: $c-font;
+    }
+  }
+  @keyframes pulseBorder {
     0% {
       border-color: transparent;
     }
     50% {
-      border-color: $c-recording;
+      border-color: $c-primary;
     }
     100% {
       border-color: transparent;
