Add uniboard fallback for browsers without min()/max() support

--- a/ui/common/css/abstract/_uniboard.scss
+++ b/ui/common/css/abstract/_uniboard.scss
@@ -49,3 +49,19 @@ $col2-uniboard-squeeze-table: minmax(200px, 240px);
 $col2-uniboard-squeeze-width: minmax(calc(55vmin), calc(100vh - #{$site-header-outer-height} - #{$block-gap}));
 
 $col1-uniboard-controls: 5rem;
+
+// fallbacks for really old browsers that don't support css min() and max() functions
+$col3-uniboard-fallback-min-width: calc(70vmin * var(--board-scale));
+$col3-uniboard-fallback-max-width: calc(
+  100vh * var(--board-scale) - #{$site-header-outer-height} - #{$col3-uniboard-controls}
+);
+$col3-uniboard-fallback-width: minmax($col3-uniboard-fallback-min-width, $col3-uniboard-fallback-max-width);
+$col3-uniboard-fallback-default-max-width: calc(
+  100vh * #{$uniboard-default-scale} - #{$site-header-outer-height} - #{$col3-uniboard-controls}
+);
+$col3-uniboard-fallback-default-width: minmax(
+  #{$col3-uniboard-default-min-width},
+  #{$col3-uniboard-fallback-default-max-width}
+);
+$col2-uniboard-fallback-width: $col3-uniboard-fallback-width;
+$col2-uniboard-fallback-default-width: $col3-uniboard-fallback-default-width;
