--- a/ui/common/css/abstract/_uniboard.scss
+++ b/ui/common/css/abstract/_uniboard.scss
@@ -30,7 +30,7 @@ $col3-uniboard-width: calc(#{$col3-uniboard-max-size} * var(--board-scale));
 // on these pages, the height is irrelevant, so we just use the width
 $uniboard-default-scale: 0.9;
 $col3-uniboard-default-min-width: 500px;
-$col3-uniboard-default-max-width: calc(#{$col3-uniboard-max-width} * #{$uniboard-default-scale});
+$col3-uniboard-default-max-width: calc(#{$col3-uniboard-max-size} * #{$uniboard-default-scale});
 $col3-uniboard-default-width: minmax(#{$col3-uniboard-default-min-width}, #{$col3-uniboard-default-max-width});
 
 $col2-uniboard-table: $col3-uniboard-table;
@@ -43,7 +43,8 @@ $col2-uniboard-max-height: $col3-uniboard-max-height;
 $col2-uniboard-max-size: min(#{$col2-uniboard-max-width}, #{$col2-uniboard-max-height});
 $col2-uniboard-width: calc(#{$col2-uniboard-max-size} * var(--board-scale));
 
-$col2-uniboard-default-width: calc(#{$col2-uniboard-max-width} * #{$uniboard-default-scale});
+$col2-uniboard-default-max-width: calc(#{$col2-uniboard-max-size} * #{$uniboard-default-scale});
+$col2-uniboard-default-width: minmax(#{$col3-uniboard-default-min-width}, #{$col2-uniboard-default-max-width});
 
 $col2-uniboard-squeeze-table: minmax(200px, 240px);
 $col2-uniboard-squeeze-width: minmax(calc(55vmin), calc(100vh - #{$site-header-outer-height} - #{$block-gap}));
