Add delete button in game info if imported by "me"
Current delete button for imported game is a bit hard to discover in the
menu of the analysis interface. This adds a link-style red delete button
under "Imported by <user>" in the game info section, which asks for
confirmation.

--- a/ui/round/css/_meta.scss
+++ b/ui/round/css/_meta.scss
@@ -29,6 +29,17 @@
     time {
       opacity: 1;
     }
+
+    form.delete button {
+      @extend %button-none;
+      padding: 0;
+      color: $c-error;
+
+      &:hover,
+      &:focus {
+        color: $c-error-over;
+      }
+    }
   }
 
   .status {
