--- a/ui/keyboardMove/css/_keyboardMove.scss
+++ b/ui/keyboardMove/css/_keyboardMove.scss
@@ -1,17 +1,22 @@
 .keyboard-move {
   @extend %flex-center-nowrap;
+  height: fit-content;
+  margin-bottom: 1rem;
   input {
-    width: 4.5em;
+    width: 6em;
     font-size: 1.1em;
     font-weight: bold;
     margin-right: 1rem;
     border: $border;
-    @include transition();
+
+    @include transition;
+
     &.wrong {
       background: $c-bad;
       color: $c-bad-over;
     }
   }
+
   em {
     color: $c-font-dim;
   }
