--- a/ui/round/css/_nvui.scss
+++ b/ui/round/css/_nvui.scss
@@ -1,10 +1,11 @@
-.round {
+#main-wrap > .round, #main-wrap > .analyse {
   grid-template-areas:
     'nvui'
     'side'
-    'uchat';
-  grid-template-columns: auto;
-  grid-template-rows: auto;
+    'uchat' !important;
+  grid-template-columns: auto !important;
+  grid-template-rows: auto !important;
+  width: 90vw;
 }
 .nvui {
   h2 {
@@ -20,12 +21,12 @@
     font-size: 1.5em;
     margin: 0;
   }
-  .pieces h3 {
-    font-weight: bold;
-  }
-  .pieces h3 {
-    margin: 0 5px 0 0;
-    display: inline;
+  .pieces {
+    h3 {
+      font-weight: bold;
+      margin: 0 5px 0 0;
+      display: inline;
+    }
   }
   .notify {
     color: $c-bad;
