--- a/ui/lobby/css/_layout.scss
+++ b/ui/lobby/css/_layout.scss
@@ -88,7 +88,7 @@ $mq-not-col3: $mq-not-small;
 
   @include breakpoint($mq-col4) {
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, fit-content(0)) auto;
+    grid-template-rows: repeat(2, fit-content(0)) auto minmax(0,1fr);
     grid-template-areas:
       'side   app     app   table'
       'tv     blog    blog  puzzle'
