--- a/ui/voice/css/_voice.scss
+++ b/ui/voice/css/_voice.scss
@@ -1,22 +1,26 @@
-$c-mic-enabled: if($theme == 'light', $c-primary, $c-primary);
 $c-mic-bg-hover: if($theme == 'light', $c-font-dimmer, transparent);
 
 #voice-control {
   position: relative;
 }
+
 #voice-status-row {
   @extend %box-neat, %flex-center-nowrap;
+  font-size: 1rem;
   align-items: stretch;
   background: $c-bg-box;
-  padding-left: 0.2em;
+  user-select: none;
+  padding-#{$end-direction}: 0.7em;
+
   #voice-control.puz & {
     background: $c-bg-zebra;
   }
-  user-select: none;
+
   > button {
     @extend %button-none;
     color: $c-font-dim;
-    padding: 0.2rem 0.5rem;
+    padding: 0.2em 0.5em;
+
     &:hover {
       color: $c-font;
     }
@@ -34,20 +38,21 @@ $c-mic-bg-hover: if($theme == 'light', $c-font-dimmer, transparent);
     font-family: 'lichess';
     font-size: 1.6em;
     border: 1px solid transparent;
-    border-width: 1px 1px;
-    border-radius: 0.3em;
+    border-radius: 4px;
+
     &:hover {
       color: $c-font;
       background-color: $c-mic-bg-hover;
     }
   }
   &.enabled span {
-    color: $c-mic-enabled;
+    color: $c-primary;
     animation: pulseBorder 2s;
     animation-iteration-count: infinite;
-    border-color: $c-primary;
+    border-color: transparent;
+
     &:hover {
-      color: $c-font;
+      color: $c-link-hover;
     }
   }
   @keyframes pulseBorder {
