import delete CSS and template tweaks

--- a/ui/round/css/_meta.scss
+++ b/ui/round/css/_meta.scss
@@ -31,14 +31,7 @@
     }
 
     form.delete button {
-      @extend %button-none;
-      padding: 0;
-      color: $c-error;
-
-      &:hover,
-      &:focus {
-        color: $c-error-over;
-      }
+      color: $c-bad;
     }
   }
 
