show relative frequency more prominently in analysis explorer

--- a/ui/analyse/css/explorer/_explorer.scss
+++ b/ui/analyse/css/explorer/_explorer.scss
@@ -121,7 +121,8 @@
       padding-#{$start-direction}: 7px;
     }
 
-    td:nth-child(2) {
+    td:nth-child(2),
+    td:nth-child(3) {
       font-size: 0.75em;
       text-align: right;
     }
