--- a/ui/common/css/abstract/_uniboard.scss
+++ b/ui/common/css/abstract/_uniboard.scss
@@ -28,10 +28,15 @@ $col3-uniboard-width: calc(#{$col3-uniboard-max-size} * var(--board-scale));
 // default zoom setting is 85% which gives a board-scale of 0.85*0.75+0.25 = 0,8875 ≈ 0.9
 // this is used for 3-col pages that don't actually have a board, e.g. tournament pages
 // on these pages, the height is irrelevant, so we just use the width
+//
+// currently, this is still calculated using the old/fallback formular
 $uniboard-default-scale: 0.9;
 $col3-uniboard-default-min-width: 500px;
-$col3-uniboard-default-max-width: calc(#{$col3-uniboard-max-size} * #{$uniboard-default-scale});
+$col3-uniboard-default-max-width: calc(
+  100vh * #{$uniboard-default-scale} - #{$site-header-outer-height} - #{$col3-uniboard-controls}
+);
 $col3-uniboard-default-width: minmax(#{$col3-uniboard-default-min-width}, #{$col3-uniboard-default-max-width});
+$col2-uniboard-default-width: $col3-uniboard-default-width;
 
 $col2-uniboard-table: $col3-uniboard-table;
 $col2-uniboard-controls: $col3-uniboard-controls;
@@ -57,12 +62,4 @@ $col3-uniboard-fallback-max-width: calc(
   100vh * var(--board-scale) - #{$site-header-outer-height} - #{$col3-uniboard-controls}
 );
 $col3-uniboard-fallback-width: minmax($col3-uniboard-fallback-min-width, $col3-uniboard-fallback-max-width);
-$col3-uniboard-fallback-default-max-width: calc(
-  100vh * #{$uniboard-default-scale} - #{$site-header-outer-height} - #{$col3-uniboard-controls}
-);
-$col3-uniboard-fallback-default-width: minmax(
-  #{$col3-uniboard-default-min-width},
-  #{$col3-uniboard-fallback-default-max-width}
-);
 $col2-uniboard-fallback-width: $col3-uniboard-fallback-width;
-$col2-uniboard-fallback-default-width: $col3-uniboard-fallback-default-width;
