--- a/ui/puzzle/css/_layout.scss
+++ b/ui/puzzle/css/_layout.scss
@@ -76,6 +76,10 @@
     }
   }
 
+  @include breakpoint($mq-col2-uniboard-squeeze) {
+    grid-template-columns: $col2-uniboard-squeeze-width var(--gauge-gap) $col2-uniboard-squeeze-table;
+  }
+
   @include breakpoint($mq-col3) {
     grid-template-areas:
       'side    . board   gauge tools'
