--- a/ui/simul/css/_layout.scss
+++ b/ui/simul/css/_layout.scss
@@ -18,7 +18,8 @@
 
   @include breakpoint($mq-col2) {
     &:not(.simul-created) {
-      grid-template-columns: var(--col2-uniboard-default-width) $col2-uniboard-table;
+      grid-template-columns: $col2-uniboard-fallback-default-width $col2-uniboard-table;
+      grid-template-columns: $col2-uniboard-default-width $col2-uniboard-table;
       grid-template-rows: auto max-content;
       grid-template-areas: 'main side' 'main uchat' '.    uchat';
     }
@@ -26,7 +27,8 @@
 
   @include breakpoint($mq-col3) {
     &.simul {
-      grid-template-columns: $col3-uniboard-side var(--col3-uniboard-default-width) $col3-uniboard-table;
+      grid-template-columns: $col3-uniboard-side $col3-uniboard-fallback-default-width $col3-uniboard-table;
+      grid-template-columns: $col3-uniboard-side $col3-uniboard-default-width $col3-uniboard-table;
       grid-template-rows: auto fit-content(0);
       grid-template-areas: 'side  main main' 'uchat main main' 'uchat .    .';
     }
