--- a/ui/tournament/css/_layout.scss
+++ b/ui/tournament/css/_layout.scss
@@ -31,7 +31,8 @@ $chat-optimal-size: calc(100vh - #{$site-header-outer-height} - #{$block-gap} - 
   grid-gap: $block-gap;
 
   @include breakpoint($mq-col2) {
-    grid-template-columns: var(--col2-uniboard-default-width) $col2-uniboard-table;
+    grid-template-columns: $col2-uniboard-fallback-default-width $col2-uniboard-table;
+    grid-template-columns: $col2-uniboard-default-width $col2-uniboard-table;
     grid-template-rows: $chat-optimal-size min-content;
     grid-template-areas: 'main  side' 'main  uchat' 'table table';
 
@@ -49,7 +50,8 @@ $chat-optimal-size: calc(100vh - #{$site-header-outer-height} - #{$block-gap} - 
   }
 
   @include breakpoint($mq-col3) {
-    grid-template-columns: $col3-uniboard-side var(--col3-uniboard-default-width) $col3-uniboard-table;
+    grid-template-columns: $col3-uniboard-side $col3-uniboard-fallback-default-width $col3-uniboard-table;
+    grid-template-columns: $col3-uniboard-side $col3-uniboard-default-width $col3-uniboard-table;
     grid-template-rows: $chat-optimal-size auto;
     grid-template-areas: 'side  main table' 'uchat main table';
 
