--- a/ui/round/css/_nvui.scss
+++ b/ui/round/css/_nvui.scss
@@ -1,4 +1,5 @@
-#main-wrap > .round, #main-wrap > .analyse {
+#main-wrap > .round,
+#main-wrap > .analyse {
   grid-template-areas:
     'nvui'
     'side'
