--- a/ui/round/css/_board-menu.scss
+++ b/ui/round/css/_board-menu.scss
@@ -2,14 +2,24 @@
   min-width: 300px;
 
   > div {
+    @extend %flex-column;
+    gap: 2em;
     text-align: $start-direction;
+  }
+
+  section {
+    @extend %flex-column;
+    gap: 1.5em;
+    &:not(:last-child) {
+      border-bottom: 1px solid $c-border;
+      padding-bottom: 2em;
+    }
   }
 
   .setting {
     @extend %flex-center-nowrap;
 
     flex: 0 0 auto;
-    margin-top: $block-gap;
 
     label {
       flex: 4 1 auto;
