Revert "fewer dom text nodes and more css tricks"
This reverts commit 887bc84d7006360f355e02297a2b838790675344.

--- a/ui/tournament/css/_team-battle.scss
+++ b/ui/tournament/css/_team-battle.scss
@@ -64,19 +64,15 @@ team {
 
   .players {
     @extend %break-word;
+
+    color: $c-font-dim;
   }
 
   score {
     font-weight: bold;
-    padding: 0 1px 0 2px;
+    padding: 0 2px;
     cursor: pointer;
 
-    &:not(:first-child)::before {
-      content: '+';
-      color: $c-font-dim;
-      font-weight: normal;
-      margin-right: 2px;
-    }
     &:hover {
       color: $c-brag;
     }
