--- a/ui/round/css/_board-menu.scss
+++ b/ui/round/css/_board-menu.scss
@@ -32,3 +32,43 @@
     }
   }
 }
+
+.board-menu-toggle {
+  position: relative;
+  &__new {
+    position: absolute;
+    top: 0;
+    bottom: 40%;
+    left: 40%;
+    right: 0;
+    margin: auto;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: red;
+
+    &::after {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 7px;
+      height: 7px;
+      border-radius: inherit;
+      background: red;
+      animation: 1.5s ease-out 0s infinite new-nag-pulse;
+      opacity: 0.2;
+      content: '';
+    }
+
+    @keyframes new-nag-pulse {
+      0% {
+        transform: scale3d(1, 1, 1);
+        opacity: 0.7;
+      }
+      100% {
+        transform: scale3d(4, 4, 4);
+        opacity: 0;
+      }
+    }
+  }
+}
