board menu nags

--- a/ui/round/css/_board-menu.scss
+++ b/ui/round/css/_board-menu.scss
@@ -30,6 +30,16 @@
     .switch + label {
       margin-#{$start-direction}: 1ch;
     }
+
+    &--nag {
+      > label {
+        &::after {
+          content: ' NEW';
+          color: $c-brag;
+          font-weight: bold;
+        }
+      }
+    }
   }
 }
 
